# suitesparse-cmake-recipe

./: .gitignore  CMakeLists.txt  README.md  cholmod_demo.cpp  run.sh
.github/workflows/: build.yml  test.yml
cmake/find/: FindBLAS.cmake  FindLAPACK.cmake  FindSuiteSparse.cmake
cmake/recipes/: metis.cmake  openblas.cmake  suitesparse.cmake
data/: matrix.mtx
